fixed the restart bug on mobile
removed the touchstart event
added a play button instead
changed the titles accordingly
updated 'how to play'

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,6 @@ body
     line-height: 1.5;
     height: 50px;
 }
-
 .btn 
 {
     margin: 20px;
@@ -49,7 +48,7 @@ body
     background-color: grey;
 }
 
-#help,.close
+#help,.close,#play
 {
     color:#FEF2BF;
     background-color: #011F3F;
@@ -104,10 +103,15 @@ body
     border: 1px solid #FEF2BF;
 }
 
+#play
+{
+    visibility: hidden;
+}
+
 footer
 {
     position: relative;
-    top:40px;
+    top:25px;
     font-size: 0.7rem;
     font-family: 'Open Sans', sans-serif;
 }
@@ -130,12 +134,12 @@ footer
     }
     #help
     {
-        top:68%;
+        top:73%;
         right: 100px;
     }
     .popup-overlay
     {
-        top: 76%;
+        top: 81%;
         right: 8%;
         height: 70px;
         width: 300px;
@@ -154,10 +158,23 @@ footer
         visibility: hidden;
     }
 
+    #play
+    {
+        visibility: visible;
+        position: absolute;
+        top:65%;
+        right: 100px;
+        height: 40px;
+        width:150px;
+
+        font-size: 10px;
+        border: 1.5px solid #FEF2BF;  
+    }
+
     footer
     {
         position: relative;
-        top:160px;
+        top:180px;
         font-size: 0.7rem;
         font-family: 'Open Sans', sans-serif;
     }
